@@ -1,6 +1,6 @@
 Package: fingerprint
-Version: 3.4.3
-Date: 2011-05-31
+Version: 3.4.4
+Date: 2011-06-03
 Title: Functions to operate on binary fingerprint data
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
